kubernetes/app-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: whereisqa
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: whereisqa
        server: aiohttp
    spec:
      containers:
        - name: whereisqa
          image: 457398059321.dkr.ecr.us-east-1.amazonaws.com/whereisqa:latest
          ports:
            - containerPort: 8080
      restartPolicy: Always
