kubernetes/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: whereisqa
  labels:
    server: aiohttp
spec:
  selector:
    app: whereisqa
  ports:
    - port: 8080
  type: NodePort
