kubernetes/app-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whereisqa-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: whereisqa.local
    http:
      paths:
      - path: /
        backend:
          serviceName: whereisqa
          servicePort: 8080
